Criação do meu portifólio

--- a/aplicativo/templates/aplicativo/partials/header.html
+++ b/aplicativo/templates/aplicativo/partials/header.html
@@ -1,10 +1,8 @@
-<header class="header-container">
+<header class="main-header-container">
     <div class="main-header container">
         <h1>
             <a class="main-logo" href="/">
-                <i class="fas fa-code i-left"></i>
                 <span class="main-logo-text">Ariel Araújo dos Santos</span>
-                <i class="fas fa-code i-right"></i>
             </a>
         </h1>  
     </div>
