--- a/aplicativo/templates/aplicativo/partials/head.html
+++ b/aplicativo/templates/aplicativo/partials/head.html
@@ -1,90 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css" integrity="sha512-P9vJUXK+LyvAzj8otTOKzdfF1F3UYVl13+F8Fof8/2QNb8Twd6Vb+VD52I7+87tex9UXxnzPgWA3rH96RExA7A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/brands.min.css" integrity="sha512-sVSECYdnRMezwuq5uAjKQJEcu2wybeAPjU4VJQ9pCRcCY4pIpIw4YMHIOQ0CypfwHRvdSPbH++dA3O4Hihm/LQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/solid.min.css" integrity="sha512-tk4nGrLxft4l30r9ETuejLU0a3d7LwMzj0eXjzc16JQj+5U1IeVoCuGLObRDc3+eQMUcEQY1RIDPGvuA7SNQ2w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+ 
 
 
     <style>
-        :root {
-    --color-primary: #1a73e8;
-    --color-primary-hover: #1558b0;
-    --color-primary-dark: #0d1117;
-    --color-primary-dark-hover: #161b22;
-    --color-primary-light: #3c4049;
-    --color-primary-light-hover: #4a4f5a;
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
 
-    --color-white: #e0e0e0;
-    --color-black: #0a0a0a;
+        html{
+            font-size: 62.5%;
+        }
 
-    --color-dark-text: #b0b3b8;
-    --color-info-light: #5a7ca0;
-    --color-debug-light: #5a7ca0;
-    --color-success-light: #3c7c57;
-    --color-alert-light: #b4882b;
-    --color-warning-light: #b4882b;
-    --color-error-light: #a83a3a;
+        body{
+            font-size: 1.6rem;
+            font-family: var(--font-primary);
+            background: grey;
+            color: var(--color-dark-text);
+        }
 
-    --color-info-dark: #3a5f85;
-    --color-debug-dark: #3a5f85;
-    --color-success-dark: #2e5f40;
-    --color-alert-dark: #715d2c;
-    --color-warning-dark: #715d2c;
-    --color-error-dark: #7f2d2d;
+        .container{
+            max-width: 144rem;
+            margin: 0 auto;
+            padding: var(--spacing-gutter-medium);
+            margin-bottom: var(--spacing-gutter-medium);
+        }
+        
 
-    --color-gray-0: #1e1e1e;
-    --color-gray-1: #252525;
-    --color-gray-2: #2d2d2d;
-    --color-gray-3: #363636;
-    --color-gray-4: #3f3f3f;
-    --color-gray-5: #494949;
-    --color-gray-6: #535353;
-    --color-gray-7: #5d5d5d;
-    --color-gray-8: #676767;
-    --color-gray-9: #717171;
-
-    --font-primary: 'Inter', sans-serif;
-    --font-headings: 'Roboto Slab', serif;
-
-    --spacing-gutter-medium: 3rem;
-    --spacing-gutter-large: 4rem;
-    }
-
-    *{
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-
-    html{
-        font-size: 62.5%;
-    }
-
-    body{
-        font-size: 1.6rem;
-        font-family: var(--font-primary);
-        background: var(--color-gray-9);
-    }
-    
-    .container{
-        max-width: 144rem;
-        margin: 0 auto;
-        padding: var(--spacing-gutter-medium);
-    }
-
-    h1,h2,h3,h4,h5,h6{
-        font-family: var(--font-headings);
-    }
-
-    .header-container{
+        .main-header-container{
             background: var(--color-primary-dark);
-            margin-bottom: 20px;
-    }
+        }
 
-    .main-logo{
+        h1,h2,h3,h4,h5,h6{
+            font-family: var(--font-headings);
+        }
+    
+        :root{
+            --color-primary: #269fe6;
+            --color-primary-hover: #2086c2;
+            --color-primary-dark: #13141f;
+            --color-primary-dark-hover: #212336;
+            --color-primary-light: #d4ecfa;
+            --color-primary-light-hover: #bdd8e7;
+ 
+            --color-white: #fff;
+            --color-black: #000;
+ 
+            --color-dark-text: #444;
+            --color-info-light: #cce5ff;
+            --color-debug-light: #cce5ff;
+            --color-success-light: #d4edda;
+            --color-alert-light: #fff3cd;
+            --color-warning-light: #fff3cd;
+            --color-error-light: #f8d7da;
+ 
+            --color-info-dark: #4d86c4;
+            --color-debug-dark: #4d86c4;
+            --color-success-dark: #4a9c5d;
+            --color-alert-dark: #927f40;
+            --color-warning-dark: #927f40;
+            --color-error-dark: #da525d;
+ 
+            --color-gray-0: #f9f9f9;
+            --color-gray-1: #e0e0e0;
+            --color-gray-2: #c7c7c7;
+            --color-gray-3: #aeaeae;
+            --color-gray-4: #959595;
+            --color-gray-5: #7d7d7d;
+            --color-gray-6: #646464;
+            --color-gray-7: #4b4b4b;
+            --color-gray-8: #323232;
+            --color-gray-9: #191919;
+ 
+            --font-primary: sans-serif;
+            --font-headings: 'Roboto Slab', serif;
+ 
+            --spacing-gutter-medium: 3rem;
+            --spacing-gutter-large: 4rem;
+        }
+
+        .main-logo{
             font-size: 4rem;
             color: var(--color-white);
             text-decoration: none;
@@ -94,43 +105,177 @@
             justify-content: center;
             width: fit-content;
             margin: 0 auto;
-            gap: 20rem;
-    }
+        }
 
-    .i-right{
-        position: relative;
-        right: 10px;
-        font-size: 4rem;
-    }
-    .i-left{
-        position: relative;
-        right: 10px;
-        font-size: 4rem;
-    }
+        .main-logo-icon{
+            margin-right: 2rem;
+        }
 
-    .aplicativo{
-        background: var(--color-white);
-        box-shadow: -5px 5px 15px rgba(0,0,0, .2);
-        transform: scale(1);
-        transition: all 300ms ease-in-out;
-        border-radius: .4rem;
-        overflow: hidden;
-        width: 100%;
-    }
+        .search-form{
+            border: .2rem solid var(--color-primary-dark);
+            max-width: 64rem;
+            margin: 0 auto;
+            border-radius: .4rem;
+            position: relative;
+            transition: all 300ms ease-in-out;
+        }
 
-    .aplicativo-list-item{
-        max-width: 64rem;
-        flex: 1 1 300px;
-        width: 100%; 
-        margin: 0 auto;
-        margin-top: 7rem;
-    }
-    
-    .aplicativo-title-container{
+        .search-form:focus-within{
+            border-color: var(--color-primary);
+            background: var(--color-white);
+        }
+
+        .search-form:focus-within .search-button{
+            color: var(--color-primary);
+        }
+
+        .search-input,
+        .search-button{
+            border: none;
+            background: none;
+            outline: none;
+            padding: 1rem;
+            transition: all 300ms ease-in-out;
+        }
+
+        .search-input{
+            width: 100%;
+            padding-right: 3rem;
+        }
+
+        .search-button{
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .search-button:focus{
+            outline: 1px solid (--color-primary);
+            background: rgba(0,0,0, 0.5);
+        }
+
+        .main-content{
+            padding-top: 0;
+        }
+
+        .main-content-list{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center; 
+            gap: var(--spacing-gutter-large)
+        }
+
+        .recipe{
+            background: var(--color-white);
+            box-shadow: -5px 5px 15px rgba(0,0,0, .2);
+            transform: scale(1);
+            transition: all 300ms ease-in-out;
+            border-radius: .4rem;
+            overflow: hidden;
+            width: 100%;
+        }
+        
+        .recipe img{
+            max-width: 100%;
+        }
+
+        .recipe-list-item{
+            max-width: 64rem;
+            flex: 1 1 300px;
+            width: 100%; 
+            margin: 0 auto;
+        }
+
+        .recipe-list-item:hover{
+            transform: scale(1.02);
+            box-shadow: -8px 8px 18px rgba(0, 0, 0, .3);
+        }
+
+        .recipe-title-container{
             padding: var(--spacing-gutter-medium);
             padding-bottom: 2rem;
         }
 
+        .recipe-author{
+            padding: 0 var(--spacing-gutter-medium);
+        }
 
+        .recipe-content{
+            padding: var(--spacing-gutter-medium);
+            padding-top: 2rem;
+        }
+
+        .recipe-author-item{
+            color: var(--color-gray-4);
+            margin-right: 2rem;
+        }
+        
+        .recipe-author a{
+            color: var(--color-primary);
+            transition: all 300ms ease-in-out;
+            text-decoration: none;
+        }
+
+        .recipe-author a:hover{
+            color: var(--color-primary-dark);
+        }
+        
+        .recipe-meta-container{
+            display: flex;
+            flex-flow: row wrap;
+            padding: var(--spacing-gutter-medium);
+            background: var(--color-gray-1);
+        }
+
+        .recipe-meta{
+            display: flex;
+            flex-flow: column nowrap;
+            flex-shrink: 1;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .recipe-meta-title{
+            font-size: 1.6rem;
+        }
+
+        .recipe-footer a{
+            background: var(--color-primary-dark);
+            display: block;
+            flex-flow: row nowrap;
+            color: var(--color-white);
+            text-decoration: none;
+            text-align: center;
+            padding: 1.5rem var(--spacing-gutter-medium);
+            transition: all 300ms ease-in-out;
+        }
+
+        .recipe-footer a:hover{
+            filter: brightness(2);
+        }
+
+        .main-footer{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: var(--color-primary-dark);
+            color: var(--color-white);
+            padding: 6.6rem;
+        }
+
+        .main-footer a{
+            color: var(--color-white);
+            text-decoration: none;
+            transition: all 300ms ease-in-out;
+        }
+
+        .main-footer a:hover{
+            filter: brightness(.8);
+        }
+
+        .recipe-test{
+            background-color: #13141f;
+        }
+        
     </style>
 </head>
